[#90] Use DmlTable column to make dml query